--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,32 @@
-# Ignore Pictures folder
-Pictures/
-
-# Ignore compiled Java classes
+# Compiled Java classes
 *.class
-
-# Ignore bin directory (contains compiled files)
 bin/
+
+# Package Files
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Virtual machine crash logs
+hs_err_pid*
+
+# IDE files
+.vscode/
+.idea/
+*.iml
+.project
+.classpath
+.settings/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
